# MaidSafe-Vault-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  README  README.md
include/maidsafe/: return_codes.h
include/maidsafe/client_manager/: client_controller.h  return_codes.h  vault_controller.h
include/maidsafe/data_store/: .data_buffer.h.swp  data_buffer.h  data_store.h  local_store.h  memory_buffer.h  permanent_store.h  sure_file_store.h  surefile_store.h
include/maidsafe/data_types/: data_factory.h  data_name_variant.h  data_type_macros.h  data_type_values.h  data_types.h  edit_policies.h  get_policies.h  group_directory.h  immutable_data.h  local_store.h  mutable_data.h  owner_directory.h  serialise_parse_data.h  structured_data_version.h  structured_data_versions.h  type_traits.h  world_directory.h
include/maidsafe/data_types/detail/: data_type_values.h
include/maidsafe/detail/: data_type_values.h
include/maidsafe/lifestuff_manager/: client_controller.h  return_codes.h  vault_controller.h
include/maidsafe/private/: cli.h  client_controller.h  download_manager.h  message_handler.h  process_manager.h  return_codes.h  tcp_transport.h  transport.h  utils.h  vault_controller.h  vault_manager.h
include/maidsafe/private/chunk_actions/: appendable_by_all_pb.h  appendable_by_all_rules.h  chunk_action_authority.h  chunk_id.h  chunk_pb.h  chunk_type.h  chunk_types.h  default_rules.h  modifiable_by_owner_rules.h  signature_packet_rules.h  utils.h
include/maidsafe/private/chunk_store/: buffered_chunk_store.h  chunk_manager.h  chunk_store.h  data_buffer.h  data_store.h  file_chunk_store.h  local_chunk_manager.h  memory_chunk_store.h  remote_chunk_store.h  threadsafe_chunk_store.h
include/maidsafe/private/data_types/: data_types.h  fob.h  network_actors.h  serialise_parse_data.h  type_traits.h  vault_data_types.h
include/maidsafe/private/lifestuff_manager/: client_controller.h  return_codes.h  vault_controller.h
include/maidsafe/private/process_management/: client_controller.h  vault_controller.h
include/maidsafe/private/utils/: fob.h  maidsafe_identity_ring.h  utilities.h
include/maidsafe/vault_manager/: client_interface.h  vault_config.h  vault_interface.h
installer/: bootstrap
installer/linux/scripts/: postinst  prem
installer/linux/scripts/fedora/: invigilator.service  vault_manager.service
installer/linux/scripts/ubuntu/: daemoniser  post_install  prerm  vault_manager
src/maidsafe/: client_manager_main.cc  controller_messages.proto  local_tcp_transport.cc  process_manager.cc  utils.cc  vault_controller.cc
src/maidsafe/client_manager/: client_controller.cc  client_manager.cc  client_manager.h  client_manager_main.cc  config.h  local_tcp_transport.h  process_manager.cc  process_manager.h  queue_operations.h  queue_struct.h  shared_memory_communication.h  tcp_connection.cc  tcp_connection.h  utils.cc  utils.h  vault_controller.cc  vault_info.proto
src/maidsafe/client_manager/tests/: dummy_client.cc  dummy_vault.cc  process_manager_test.cc  test_utils.cc  test_utils.h  utils_test.cc
src/maidsafe/data_store/: data_buffer.cc  data_buffer.h  local_store.cc  memory_buffer.cc  permanent_store.cc  sure_file_store.cc  surefile_store.cc  utils.cc  utils.h
src/maidsafe/data_store/tests/: data_buffer_test.cc  data_buffer_unit_test.cc  data_store_test.cc  local_store_test.cc  memory_buffer_test.cc  permanent_store_test.cc  sure_file_store_test.cc
src/maidsafe/data_types/: data.proto  data_factory.cc  data_pb.h  data_types.cc  directory_types.proto  directory_types_pb.h  group_directory.cc  immutable_data.cc  mutable_data.cc  mutable_data.proto  mutable_data_pb.h  owner_directory.cc  structured_data_version.cc  structured_data_version.proto  structured_data_versions.cc  structured_data_versions.proto  world_directory.cc
src/maidsafe/data_types/tests/: data_types_test.cc  structured_data_versions_test.cc  tests_main.cc
src/maidsafe/lifestuff_manager/: client_controller.cc  config.h  controller_messages.proto  controller_messages_pb.h  download_manager.cc  download_manager.h  lifestuff_manager.cc  lifestuff_manager.h  lifestuff_manager_main.cc  local_tcp_transport.cc  local_tcp_transport.h  process_manager.cc  process_manager.h  queue_operations.h  queue_struct.h  shared_memory_communication.h  tcp_connection.cc  tcp_connection.h  utils.cc  utils.h  vault_controller.cc  vault_info.proto  vault_info_pb.h
src/maidsafe/private/: chunk_action_authority.cc  chunk_action_authority.h  chunk_messages_pb.h  cli.cc  client_controller.cc  config.cc  config.h  controller_messages.proto  controller_messages_pb.h  data_handler.cc  data_handler.h  download_manager.cc  download_manager.h  local_tcp_transport.cc  local_tcp_transport.h  log.h  message_handler.cc  message_handler.h  network_interface.cc  network_interface.h  process_manager.cc  process_manager.h  return_codes.h  tcp_connection.cc  tcp_connection.h  tcp_transport.cc  tcp_transport.h  transport.h  transport.proto  transport_pb.h  utils.cc  utils.h  vault_controller.cc  vault_identity_info.proto  vault_identity_info_pb.h  vault_info.proto  vault_info_pb.h  vault_manager.cc  vault_manager.h  vault_manager_main.cc  (+4 more)
src/maidsafe/tests/: dummy_vault.cc
src/maidsafe/tools/: bootstrap_file_tool.cc  client_controller_tool.cc  signing_tool.cc
src/maidsafe/vault_manager/: client_connections.cc  client_connections.h  client_interface.cc  config.cc  config.h  config_file.h  config_file_handler.cc  config_file_handler.h  dispatcher.cc  dispatcher.h  interprocess_messages.proto  local_tcp_transport.cc  local_tcp_transport.h  new_connections.cc  new_connections.h  process_manager.cc  process_manager.h  queue_operations.h  queue_struct.h  rpc_helper.h  shared_memory_communication.h  tcp_connection.cc  tcp_connection.h  tcp_listener.cc  tcp_listener.h  utils.cc  utils.h  vault_config.cc  vault_info.cc  vault_info.h  vault_info.proto  vault_interface.cc  vault_manager.cc  vault_manager.h  vault_manager_main.cc
tools/: restart_vm.sh  restart_vm_windows.bat
(+227 files in other folders)
